Closed Bug 1378247 Opened 7 years ago Closed 7 years ago

[RTL] Scrollbar moves in opposite direction with horizontal scrolling

Categories

(Core :: Panning and Zooming, defect, P2)

56 Branch
x86_64
Windows 7
defect

Tracking

()

VERIFIED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 - fixed
firefox56 --- fixed

People

(Reporter: over68, Assigned: kats)

References

Details

(Keywords: regression)

Attachments

(2 files)

Steps to reproduce:

1. Open https://onedrive.live.com/download?cid=F96BA52A2AF70D03&resid=F96BA52A2AF70D03!1476&authkey=APfKZqnv1yfw-RE.
2. Go to the scroll box.
3. Drag the scrollbar left.


Actual results:

Scrollbar moves in opposite direction with horizontal scrolling.

See https://www.youtube.com/watch?v=RQ7jw_3S_mY
[Tracking Requested - why for this release]:
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P2
Summary: Scrollbar moves in opposite direction with horizontal scrolling → [RTL] Scrollbar moves in opposite direction with horizontal scrolling
I can look into this.
Assignee: nobody → bugmail
For posterity, attaching the test page as an attachment to the bug.
Comment on attachment 8883669 [details]
Bug 1378247 - Properly handle async scrollbar-dragging of RTL scrollframes.

https://reviewboard.mozilla.org/r/154576/#review159686

Thanks for looking at this!
Attachment #8883669 - Flags: review?(botond) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b9aed48eb292
Properly handle async scrollbar-dragging of RTL scrollframes. r=botond
https://hg.mozilla.org/mozilla-central/rev/b9aed48eb292
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Can you confirm the issue is fixed for you in today's nightly? Thanks!
Flags: needinfo?(over68)
I confirm this bug has been fixed in the latest nightly build.
Flags: needinfo?(over68)
Comment on attachment 8883669 [details]
Bug 1378247 - Properly handle async scrollbar-dragging of RTL scrollframes.

Approval Request Comment
[Feature/Bug causing the regression]: Async scrollbar dragging
[User impact if declined]: scrollbar dragging on RTL scrollframes doesn't work properly
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no, already verified
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: not really
[Why is the change risky/not risky?]: small code change to remove an assumption about valid scroll positions
[String changes made/needed]: none
Attachment #8883669 - Flags: approval-mozilla-beta?
Status: RESOLVED → VERIFIED
Comment on attachment 8883669 [details]
Bug 1378247 - Properly handle async scrollbar-dragging of RTL scrollframes.

fix for apz with rtl, verified in nightly, beta55+
Attachment #8883669 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #12)
> [Is this code covered by automated tests?]: no
> [Has the fix been verified in Nightly?]: yes
> [Needs manual test from QE? If yes, steps to reproduce]: no, already verified

Setting qe-verify- based on Kartikaya's assessment on manual testing needs.
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: