Bug 1378247 - Properly handle async scrollbar-dragging of RTL scrollframes. r=botond

For RTL scrollframes the scrollable rect can extend into the negative-x coordinate
space as the user can scroll leftwards from the "zero" position. The code was
assuming a zero minimum scroll position in a couple of places which broke down
on RTL scrollframes.

MozReview-Commit-ID: 5FxELpafWSD